trying to fix alignment

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -5,9 +5,7 @@
     padding: 20px 0px;
     background-color: themed("bgSoft");
     display: flex;
-    // flex-direction: row;
-    flex-direction: column; 
-    align-items: center; 
+    flex-direction: row;
 
     @include mobile {
       padding: 5px;
